[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13"
byteorder = "1"
rust-crypto = "0.2"
eframe = "0.18"
egui = "0.18"

[dependencies.windows-sys]
version = "0.36"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Threading"
]